--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.12.2",
+	"version": "0.12.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -40,19 +40,24 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
+		"@tanstack/table-core": "^8.20.5",
 		"lucide-svelte": ">= 0.400.0 < 1.0.0",
 		"svelte": "^4.0.0 || ^5.0.0",
-		"sveltekit-superforms": "^2.15.1",
-		"zod": "^3.23.8",
-		"@tanstack/table-core": "^8.20.5"
+		"sveltekit-superforms": "^2.20.0",
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.5.4",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"@internationalized/date": "^3.5.6",
+		"embla-carousel-svelte": "8.3.0",
+		"formsnap": "2.0.0-next.0",
+		"mode-watcher": "^0.4.1",
+		"paneforge": "1.0.0-next.1",
+		"svelte-sonner": "^0.3.28"
 	},
 	"devDependencies": {
-		"@internationalized/date": "^3.5.6",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.7.3",
 		"@sveltejs/package": "^2.3.7",
@@ -62,17 +67,12 @@
 		"@typescript-eslint/eslint-plugin": "^8.11.0",
 		"@typescript-eslint/parser": "^8.11.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "1.0.0-next.29",
-		"cmdk-sv": "^0.0.18",
-		"embla-carousel-svelte": "8.3.0",
+		"bits-ui": "1.0.0-next.30",
 		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
-		"formsnap": "2.0.0-next.0",
 		"happy-dom": "^15.7.4",
 		"lucide-svelte": "^0.453.0",
-		"mode-watcher": "^0.4.1",
-		"paneforge": "1.0.0-next.1",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
@@ -80,8 +80,6 @@
 		"publint": "^0.2.12",
 		"svelte": "^5.1.3",
 		"svelte-check": "^4.0.5",
-		"svelte-sonner": "^0.3.28",
-		"sveltekit-superforms": "^2.20.0",
 		"tailwindcss": "^3.4.14",
 		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
