--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.12.4",
+	"version": "0.12.5",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -55,7 +55,9 @@
 		"formsnap": "2.0.0-next.0",
 		"mode-watcher": "^0.4.1",
 		"paneforge": "1.0.0-next.1",
-		"svelte-sonner": "^0.3.28"
+		"svelte-sonner": "^0.3.28",
+		"bits-ui": "1.0.0-next.30",
+		"vaul-svelte": "1.0.0-next.1"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
@@ -67,7 +69,6 @@
 		"@typescript-eslint/eslint-plugin": "^8.11.0",
 		"@typescript-eslint/parser": "^8.11.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "1.0.0-next.30",
 		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
@@ -83,7 +84,6 @@
 		"tailwindcss": "^3.4.14",
 		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
-		"vaul-svelte": "1.0.0-next.1",
 		"vite": "^5.4.10",
 		"vitest": "^2.1.3",
 		"zod": "^3.23.8"
