--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.12.11",
+	"version": "0.12.12",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -42,13 +42,13 @@
 	"peerDependencies": {
 		"@tanstack/table-core": "^8.20.5",
 		"lucide-svelte": ">= 0.400.0 < 1.0.0",
-		"svelte": "^4.0.0 || ^5.0.0",
+		"svelte": "^5.0.0",
 		"sveltekit-superforms": "^2.20.0",
 		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.6",
-		"bits-ui": "1.0.0-next.34",
+		"bits-ui": "1.0.0-next.39",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.3.1",
 		"formsnap": "2.0.0-next.1",
@@ -61,7 +61,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.7.3",
+		"@sveltejs/kit": "^2.7.4",
 		"@sveltejs/package": "^2.3.7",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
@@ -69,10 +69,10 @@
 		"@typescript-eslint/eslint-plugin": "^8.12.2",
 		"@typescript-eslint/parser": "^8.12.2",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.13.0",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
-		"happy-dom": "^15.7.4",
+		"happy-dom": "^15.8.0",
 		"lucide-svelte": "^0.454.0",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
