--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.12.17",
+	"version": "0.12.18",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -48,7 +48,7 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.6",
-		"bits-ui": "1.0.0-next.45",
+		"bits-ui": "1.0.0-next.46",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.3.1",
 		"formsnap": "2.0.0-next.1",
@@ -60,6 +60,7 @@
 		"vaul-svelte": "1.0.0-next.2"
 	},
 	"devDependencies": {
+		"@kayord/tw-plugin": "^1.0.3",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.7.7",
 		"@sveltejs/package": "^2.3.7",
@@ -79,9 +80,10 @@
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"publint": "^0.2.12",
-		"svelte": "^5.1.10",
+		"svelte": "^5.1.11",
 		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.14",
+		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.10",
