--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.13.6",
+	"version": "0.13.7",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -49,12 +49,12 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.6.0",
-		"bits-ui": "1.0.0-next.71",
+		"bits-ui": "1.0.0-next.74",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.5.1",
-		"formsnap": "2.0.0-next.1",
+		"formsnap": "2.0.0",
 		"mode-watcher": "^0.5.0",
-		"paneforge": "1.0.0-next.1",
+		"paneforge": "1.0.0-next.2",
 		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
@@ -63,15 +63,15 @@
 	"devDependencies": {
 		"@kayord/tw-plugin": "^1.0.3",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.10.1",
+		"@sveltejs/kit": "^2.13.0",
 		"@sveltejs/package": "^2.3.7",
-		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.6",
-		"@typescript-eslint/eslint-plugin": "^8.18.0",
-		"@typescript-eslint/parser": "^8.18.0",
+		"@typescript-eslint/eslint-plugin": "^8.18.1",
+		"@typescript-eslint/parser": "^8.18.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.16.0",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"happy-dom": "^15.11.7",
@@ -81,9 +81,9 @@
 		"prettier-plugin-svelte": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"publint": "^0.2.12",
-		"svelte": "^5.11.2",
+		"svelte": "^5.15.0",
 		"svelte-check": "^4.1.1",
-		"tailwindcss": "^3.4.16",
+		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.2",
