--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,24 +9,6 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "Bundler"
-	},
-	"include": [
-		"./svelte-kit/ambient.d.ts",
-		"./svelte-kit/types/**/$types.d.ts",
-		"./vite.config.ts",
-		"./src/**/*.js",
-		"./src/**/*.ts",
-		"./src/**/*.svelte",
-		"./tests/**/*.js",
-		"./tests/**/*.ts",
-		"./tests/**/*.svelte"
-	],
-	"exclude": [
-		"./node_modules/**",
-		"./svelte-kit/[!ambient.d.ts]**",
-		"./src/service-worker.js",
-		"./src/service-worker.ts",
-		"./src/service-worker.d.ts"
-	]
+		"moduleResolution": "bundler"
+	}
 }
