--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 		"mode-watcher": "^0.5.1",
 		"paneforge": "1.0.0-next.4",
 		"svelte-sonner": "^0.3.28",
-		"tailwind-merge": "^2.6.0",
+		"tailwind-merge": "^3.0.1",
 		"tailwind-variants": "^0.3.1",
 		"vaul-svelte": "1.0.0-next.6"
 	},
@@ -66,24 +66,23 @@
 		"@sveltejs/kit": "^2.17.2",
 		"@sveltejs/package": "^2.3.10",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@tailwindcss/vite": "^4.0.7",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
 		"@typescript-eslint/eslint-plugin": "^8.24.1",
 		"@typescript-eslint/parser": "^8.24.1",
-		"autoprefixer": "^10.4.20",
 		"eslint": "^9.20.1",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"happy-dom": "^17.1.0",
 		"lucide-svelte": "^0.475.0",
-		"postcss": "^8.5.2",
 		"prettier": "^3.5.1",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.3.5",
 		"svelte": "^5.20.2",
 		"svelte-check": "^4.1.4",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.7",
 		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
