--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.14.2",
+	"version": "0.14.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -14,7 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:unit": "vitest",
-		"lib": "pnpm dlx shadcn-svelte@next add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch && ./tw.sh",
+		"lib": "pnpm dlx shadcn-svelte@1.0.0next.4 add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch && ./tw.sh",
 		"next": "./next.sh"
 	},
 	"exports": {
@@ -49,7 +49,6 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.7.0",
-		"bits-ui": "1.3.4",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.5.2",
 		"formsnap": "2.0.0",
@@ -68,22 +67,23 @@
 		"@tailwindcss/vite": "^4.0.9",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
-		"@typescript-eslint/eslint-plugin": "^8.25.0",
-		"@typescript-eslint/parser": "^8.25.0",
+		"@typescript-eslint/eslint-plugin": "^8.26.0",
+		"@typescript-eslint/parser": "^8.26.0",
+		"bits-ui": "1.3.5",
 		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.0.2",
 		"eslint-plugin-svelte": "^3.0.2",
 		"happy-dom": "^17.1.8",
-		"lucide-svelte": "^0.476.0",
-		"prettier": "^3.5.2",
+		"lucide-svelte": "^0.477.0",
+		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"publint": "^0.3.6",
-		"svelte": "^5.20.5",
+		"publint": "^0.3.8",
+		"svelte": "^5.21.0",
 		"svelte-check": "^4.1.4",
-		"tailwindcss": "^4.0.9",
+		"tailwindcss": "^3.0.0",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.3",
+		"typescript": "^5.8.2",
 		"vite": "^6.2.0",
 		"vitest": "^3.0.7",
 		"zod": "^3.24.2"
