--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.14.3",
+	"version": "0.14.4",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -14,7 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:unit": "vitest",
-		"lib": "pnpm dlx shadcn-svelte@1.0.0next.4 add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch && ./tw.sh",
+		"lib": "pnpm dlx shadcn-svelte@next add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch && ./tw.sh",
 		"next": "./next.sh"
 	},
 	"exports": {
@@ -73,7 +73,7 @@
 		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.0.2",
 		"eslint-plugin-svelte": "^3.0.2",
-		"happy-dom": "^17.1.8",
+		"happy-dom": "^17.1.9",
 		"lucide-svelte": "^0.477.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -81,7 +81,7 @@
 		"publint": "^0.3.8",
 		"svelte": "^5.21.0",
 		"svelte-check": "^4.1.4",
-		"tailwindcss": "^3.0.0",
+		"tailwindcss": "^4.0.9",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.0",
