--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.14.4",
+	"version": "0.14.5",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -57,7 +57,8 @@
 		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
-		"vaul-svelte": "1.0.0-next.6"
+		"vaul-svelte": "1.0.0-next.6",
+		"bits-ui": "1.3.5"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
@@ -69,7 +70,6 @@
 		"@testing-library/svelte": "^5.2.7",
 		"@typescript-eslint/eslint-plugin": "^8.26.0",
 		"@typescript-eslint/parser": "^8.26.0",
-		"bits-ui": "1.3.5",
 		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.0.2",
 		"eslint-plugin-svelte": "^3.0.2",
