--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.14.5",
+	"version": "0.14.6",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -49,6 +49,7 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.7.0",
+		"bits-ui": "1.3.5",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.5.2",
 		"formsnap": "2.0.0",
@@ -57,8 +58,7 @@
 		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
-		"vaul-svelte": "1.0.0-next.6",
-		"bits-ui": "1.3.5"
+		"vaul-svelte": "1.0.0-next.6"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
@@ -79,7 +79,7 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.3.8",
-		"svelte": "^5.21.0",
+		"svelte": "^5.22.0",
 		"svelte-check": "^4.1.4",
 		"tailwindcss": "^4.0.9",
 		"tslib": "^2.8.1",
