--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.14.13",
+	"version": "0.14.14",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -49,7 +49,7 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.7.0",
-		"bits-ui": "1.3.9",
+		"bits-ui": "1.3.10",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.5.2",
 		"formsnap": "2.0.0",
@@ -83,6 +83,7 @@
 		"svelte-check": "^4.1.5",
 		"tailwindcss": "^4.0.12",
 		"tslib": "^2.8.1",
+		"tw-animate-css": "^1.2.0",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.1",
 		"vitest": "^3.0.8",
@@ -92,7 +93,7 @@
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
+	"packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
