--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.14.15",
+	"version": "0.14.16",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -49,7 +49,7 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.7.0",
-		"bits-ui": "1.3.11",
+		"bits-ui": "1.3.12",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.5.2",
 		"formsnap": "2.0.0",
@@ -61,11 +61,12 @@
 		"vaul-svelte": "1.0.0-next.6"
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.482.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.19.0",
+		"@sveltejs/kit": "^2.19.1",
 		"@sveltejs/package": "^2.3.10",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.0.13",
+		"@tailwindcss/vite": "^4.0.14",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
 		"@typescript-eslint/eslint-plugin": "^8.26.1",
@@ -74,18 +75,18 @@
 		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-svelte": "^3.1.0",
 		"happy-dom": "^17.4.4",
-		"lucide-svelte": "^0.479.0",
+		"lucide-svelte": "^0.482.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.3.9",
 		"svelte": "^5.23.0",
 		"svelte-check": "^4.1.5",
-		"tailwindcss": "^4.0.13",
+		"tailwindcss": "^4.0.14",
 		"tslib": "^2.8.1",
 		"tw-animate-css": "^1.2.0",
 		"typescript": "^5.8.2",
-		"vite": "^6.2.1",
+		"vite": "^6.2.2",
 		"vitest": "^3.0.8",
 		"zod": "^3.24.2"
 	},
@@ -93,7 +94,7 @@
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b",
+	"packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
