--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.15.2",
+	"version": "0.15.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -83,7 +83,7 @@
 		"svelte-check": "^4.1.5",
 		"tailwindcss": "^4.0.14",
 		"tslib": "^2.8.1",
-		"tw-animate-css": "^1.2.3",
+		"tw-animate-css": "1.2.4",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.2",
 		"vitest": "^3.0.9",
