--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.18.2",
+	"version": "0.18.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -49,39 +49,39 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.8.0",
-		"bits-ui": "1.4.6",
+		"bits-ui": "1.4.8",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.6.0",
 		"formsnap": "2.0.1",
-		"mode-watcher": "^1.0.6",
+		"mode-watcher": "^1.0.7",
 		"paneforge": "1.0.0-next.5",
-		"svelte-sonner": "^0.3.28",
-		"tailwind-merge": "^3.2.0",
+		"svelte-sonner": "^1.0.1",
+		"tailwind-merge": "^3.3.0",
 		"tailwind-variants": "^1.0.0",
 		"vaul-svelte": "1.0.0-next.7"
 	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.508.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.20.8",
+		"@lucide/svelte": "^0.510.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.21.0",
 		"@sveltejs/package": "^2.3.11",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.1.5",
+		"@tailwindcss/vite": "^4.1.6",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
-		"@typescript-eslint/eslint-plugin": "^8.32.0",
-		"@typescript-eslint/parser": "^8.32.0",
+		"@typescript-eslint/eslint-plugin": "^8.32.1",
+		"@typescript-eslint/parser": "^8.32.1",
 		"eslint": "^9.26.0",
-		"eslint-config-prettier": "^10.1.3",
-		"eslint-plugin-svelte": "^3.5.1",
-		"happy-dom": "^17.4.6",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.6.0",
+		"happy-dom": "^17.4.7",
 		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.3.12",
-		"svelte": "^5.28.2",
-		"svelte-check": "^4.1.7",
-		"tailwindcss": "^4.1.5",
+		"svelte": "^5.28.6",
+		"svelte-check": "^4.2.0",
+		"tailwindcss": "^4.1.6",
 		"tslib": "^2.8.1",
 		"tw-animate-css": "1.2.9",
 		"typescript": "^5.8.3",
@@ -93,9 +93,10 @@
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
+	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
 	"pnpm": {
 		"onlyBuiltDependencies": [
+			"@tailwindcss/oxide",
 			"esbuild"
 		]
 	}
