--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
 	"peerDependencies": {
 		"@lucide/svelte": ">= 0.482.0 < 1.0.0",
 		"@tanstack/table-core": "^8.20.5",
+		"layerchart": "2.0.0-next.6",
 		"svelte": "^5.0.0",
 		"sveltekit-superforms": "^2.20.0",
-		"zod": "^3.23.8",
-		"layerchart": "2.0.0-next.6"
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
-		"@internationalized/date": "^3.8.0",
-		"bits-ui": "1.4.8",
+		"@internationalized/date": "^3.8.1",
+		"bits-ui": "1.5.2",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.6.0",
 		"formsnap": "2.0.1",
@@ -58,7 +58,7 @@
 		"paneforge": "1.0.0-next.5",
 		"svelte-sonner": "^1.0.1",
 		"tailwind-merge": "^3.3.0",
-		"tailwind-variants": "^0.2.1",
+		"tailwind-variants": "^1.0.0",
 		"vaul-svelte": "1.0.0-next.7"
 	},
 	"devDependencies": {
@@ -69,7 +69,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/vite": "^4.1.7",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/svelte": "^5.2.7",
+		"@testing-library/svelte": "^5.2.8",
 		"@typescript-eslint/eslint-plugin": "^8.32.1",
 		"@typescript-eslint/parser": "^8.32.1",
 		"eslint": "^9.27.0",
@@ -87,8 +87,8 @@
 		"tw-animate-css": "1.3.0",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5",
-		"vitest": "^3.1.3",
-		"zod": "^3.24.4"
+		"vitest": "^3.1.4",
+		"zod": "^3.25.4"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
