--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,12 +15,12 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: latest
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 24
           cache: "pnpm"
           registry-url: https://registry.npmjs.org
           scope: "@kayord"
