--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"@tailwindcss/vite": "^4.1.8",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.8",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
 		"@typescript-eslint/eslint-plugin": "^8.33.1",
@@ -86,7 +87,7 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.12",
 		"publint": "^0.3.12",
-		"svelte": "5.33.14",
+		"svelte": "5.33.16",
 		"svelte-check": "^4.2.1",
 		"tailwindcss": "^4.1.8",
 		"tslib": "^2.8.1",
@@ -94,7 +95,7 @@
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5",
 		"vitest": "^3.2.2",
-		"zod": "^3.25.55"
+		"zod": "^3.25.56"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
