--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.20.1",
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -14,8 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:unit": "vitest",
-		"lib": "pnpm dlx shadcn-svelte@next add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch",
-		"libOld": "pnpm dlx shadcn-svelte@next add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch && ./tw.sh",
+		"lib": "pnpm dlx shadcn-svelte@latest add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch",
 		"next": "./next.sh"
 	},
 	"exports": {
@@ -51,7 +50,7 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
-		"bits-ui": "2.4.1",
+		"bits-ui": "2.5.0",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.6.0",
 		"formsnap": "2.0.1",
@@ -65,7 +64,7 @@
 	"devDependencies": {
 		"@lucide/svelte": "^0.513.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.21.2",
+		"@sveltejs/kit": "^2.21.3",
 		"@sveltejs/package": "^2.3.11",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@tailwindcss/vite": "^4.1.8",
@@ -87,21 +86,21 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.12",
 		"publint": "^0.3.12",
-		"svelte": "5.33.16",
+		"svelte": "5.33.18",
 		"svelte-check": "^4.2.1",
 		"tailwindcss": "^4.1.8",
 		"tslib": "^2.8.1",
 		"tw-animate-css": "1.3.4",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5",
-		"vitest": "^3.2.2",
+		"vitest": "^3.2.3",
 		"zod": "^3.25.56"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912",
+	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@tailwindcss/oxide",
