--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -50,19 +50,19 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
-		"bits-ui": "2.8.0",
+		"bits-ui": "2.8.2",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.6.0",
 		"formsnap": "2.0.1",
 		"mode-watcher": "^1.0.8",
-		"paneforge": "1.0.0-next.5",
+		"paneforge": "1.0.0",
 		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
 		"vaul-svelte": "1.0.0-next.7"
 	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.515.0",
+		"@lucide/svelte": "^0.517.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/kit": "^2.21.5",
 		"@sveltejs/package": "^2.3.11",
@@ -73,8 +73,8 @@
 		"@testing-library/user-event": "^14.6.1",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
-		"@typescript-eslint/eslint-plugin": "^8.34.0",
-		"@typescript-eslint/parser": "^8.34.0",
+		"@typescript-eslint/eslint-plugin": "^8.34.1",
+		"@typescript-eslint/parser": "^8.34.1",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
 		"eslint": "^9.29.0",
@@ -86,15 +86,15 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.12",
 		"publint": "^0.3.12",
-		"svelte": "5.34.3",
+		"svelte": "5.34.6",
 		"svelte-check": "^4.2.1",
 		"tailwindcss": "^4.1.10",
 		"tslib": "^2.8.1",
 		"tw-animate-css": "1.3.4",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5",
-		"vitest": "^3.2.3",
-		"zod": "^3.25.64"
+		"vitest": "^3.2.4",
+		"zod": "^3.25.67"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
