--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -50,7 +50,7 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
-		"bits-ui": "2.8.12",
+		"bits-ui": "2.8.13",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.6.0",
 		"formsnap": "2.0.1",
@@ -58,17 +58,17 @@
 		"paneforge": "1.0.0",
 		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
-		"tailwind-variants": "^1.0.0",
+		"tailwind-variants": "^2.0.1",
 		"vaul-svelte": "1.0.0-next.7"
 	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.525.0",
+		"@lucide/svelte": "^0.533.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.26.0",
+		"@sveltejs/kit": "^2.26.1",
 		"@sveltejs/package": "^2.4.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/vite": "^4.1.11",
-		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/jest-dom": "^6.6.4",
 		"@testing-library/svelte": "^5.2.8",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/d3-scale": "^4.0.9",
@@ -77,7 +77,7 @@
 		"@typescript-eslint/parser": "^8.38.0",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
-		"eslint": "^9.31.0",
+		"eslint": "^9.32.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
 		"happy-dom": "^18.0.1",
@@ -86,7 +86,7 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"publint": "^0.3.12",
-		"svelte": "5.36.16",
+		"svelte": "5.37.1",
 		"svelte-check": "^4.3.0",
 		"sveltekit-superforms": "^2.27.1",
 		"tailwindcss": "^4.1.11",
@@ -95,7 +95,7 @@
 		"typescript": "^5.8.3",
 		"vite": "^7.0.6",
 		"vitest": "^3.2.4",
-		"zod": "^4.0.10"
+		"zod": "4.0.10"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
