--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:unit": "vitest run",
+		"test:coverage": "vitest run --coverage",
 		"lib": "pnpm dlx shadcn-svelte@latest add -a -y -o --no-deps && pnpm format && pnpm version --no-git-tag-version patch",
 		"next": "./next.sh"
 	},
