--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,6 @@
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "bundler",
-		"types": [
-			"@testing-library/jest-dom"
-		]
+		"types": ["@testing-library/jest-dom"]
 	}
 }
