--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
 		"./formsnap": {
 			"types": "./dist/formsnap/index.d.ts",
 			"default": "./dist/formsnap/index.js"
+		},
+		"./chart": {
+			"types": "./dist/chart/index.d.ts",
+			"default": "./dist/chart/index.js"
 		}
 	},
 	"files": [
@@ -48,6 +52,11 @@
 		"svelte": "^5.0.0",
 		"sveltekit-superforms": "^2.27.1",
 		"zod": "^4.0.5"
+	},
+	"peerDependenciesMeta": {
+		"layerchart": {
+			"optional": true
+		}
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.10.0",
@@ -103,7 +112,7 @@
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34",
+	"packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@tailwindcss/oxide",
