--- a/package.json
+++ b/package.json
@@ -23,26 +23,6 @@
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js"
 		},
-		"./utils": {
-			"types": "./dist/utils/index.d.ts",
-			"default": "./dist/utils/index.js"
-		},
-		"./mode-watcher": {
-			"types": "./dist/mode-watcher/index.d.ts",
-			"default": "./dist/mode-watcher/index.js"
-		},
-		"./data-table": {
-			"types": "./dist/form/index.d.ts",
-			"default": "./dist/form/index.js"
-		},
-		"./form": {
-			"types": "./dist/form/index.d.ts",
-			"default": "./dist/form/index.js"
-		},
-		"./chart": {
-			"types": "./dist/chart/index.d.ts",
-			"default": "./dist/chart/index.js"
-		},
 		"./calendar": {
 			"types": "./dist/calendar/index.d.ts",
 			"default": "./dist/calendar/index.js"
@@ -51,9 +31,37 @@
 			"types": "./dist/carousel/index.d.ts",
 			"default": "./dist/carousel/index.js"
 		},
+		"./chart": {
+			"types": "./dist/chart/index.d.ts",
+			"default": "./dist/chart/index.js"
+		},
+		"./data-table": {
+			"types": "./dist/form/index.d.ts",
+			"default": "./dist/form/index.js"
+		},
 		"./drawer": {
 			"types": "./dist/drawer/index.d.ts",
 			"default": "./dist/drawer/index.js"
+		},
+		"./form": {
+			"types": "./dist/form/index.d.ts",
+			"default": "./dist/form/index.js"
+		},
+		"./hooks": {
+			"types": "./dist/hooks/index.d.ts",
+			"default": "./dist/hooks/index.js"
+		},
+		"./resizable": {
+			"types": "./dist/resizable/index.d.ts",
+			"default": "./dist/resizable/index.js"
+		},
+		"./sonner": {
+			"types": "./dist/sonner/index.d.ts",
+			"default": "./dist/sonner/index.js"
+		},
+		"./utils": {
+			"types": "./dist/utils/index.d.ts",
+			"default": "./dist/utils/index.js"
 		}
 	},
 	"files": [
@@ -63,18 +71,24 @@
 	],
 	"peerDependencies": {
 		"@lucide/svelte": ">= 0.482.0 < 1.0.0",
+		"mode-watcher": "^1.1.0",
 		"svelte": "^5.0.0",
 		"layerchart": "^2.0.0-next.6",
+		"svelte-sonner": "^1.0.5",
 		"embla-carousel-svelte": "^8.6.0",
 		"@tanstack/table-core": "^8.20.5",
 		"vaul-svelte": "^1.0.0-next.7",
 		"sveltekit-superforms": "^2.27.1",
 		"@internationalized/date": "^3.10.0",
 		"formsnap": "^2.0.1",
+		"paneforge": "^1.0.2",
 		"zod": "^4.0.5"
 	},
 	"peerDependenciesMeta": {
 		"layerchart": {
+			"optional": true
+		},
+		"svelte-sonner": {
 			"optional": true
 		},
 		"embla-carousel-svelte": {
@@ -97,19 +111,22 @@
 		},
 		"@internationalized/date": {
 			"optional": true
+		},
+		"paneforge": {
+			"optional": true
 		}
 	},
 	"dependencies": {
 		"bits-ui": "2.11.4",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^3.3.1",
-		"tailwind-variants": "^3.1.1",
-		"mode-watcher": "^1.1.0",
-		"paneforge": "1.0.2",
-		"svelte-sonner": "^1.0.5"
+		"tailwind-variants": "^3.1.1"
 	},
 	"devDependencies": {
 		"formsnap": "^2.0.1",
+		"mode-watcher": "^1.1.0",
+		"paneforge": "^1.0.2",
+		"svelte-sonner": "^1.0.5",
 		"@internationalized/date": "^3.10.0",
 		"@lucide/svelte": "^0.545.0",
 		"@sveltejs/adapter-auto": "^6.1.1",
