--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "2.0.3",
+	"version": "2.0.4",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -117,52 +117,52 @@
 		}
 	},
 	"dependencies": {
-		"bits-ui": "2.11.6",
+		"bits-ui": "2.14.0",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1"
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.10.0",
-		"@lucide/svelte": "^0.545.0",
-		"@sveltejs/adapter-auto": "^6.1.1",
-		"@sveltejs/kit": "^2.47.0",
+		"@lucide/svelte": "^0.546.0",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/kit": "^2.47.2",
 		"@sveltejs/package": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/vite": "^4.1.14",
+		"@tailwindcss/vite": "^4.1.15",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.2.8",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
-		"@typescript-eslint/eslint-plugin": "^8.46.1",
-		"@typescript-eslint/parser": "^8.46.1",
+		"@typescript-eslint/eslint-plugin": "^8.46.2",
+		"@typescript-eslint/parser": "^8.46.2",
 		"@vitest/coverage-v8": "3.2.4",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
 		"embla-carousel-svelte": "^8.6.0",
-		"eslint": "^9.37.0",
+		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
+		"eslint-plugin-svelte": "^3.12.5",
 		"formsnap": "^2.0.1",
-		"jsdom": "^27.0.0",
+		"jsdom": "^27.0.1",
 		"layerchart": "2.0.0-next.40",
 		"mode-watcher": "^1.1.0",
 		"paneforge": "^1.0.2",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.0",
-		"publint": "^0.3.14",
-		"svelte": "5.40.1",
+		"prettier-plugin-tailwindcss": "^0.7.1",
+		"publint": "^0.3.15",
+		"svelte": "5.41.1",
 		"svelte-check": "^4.3.3",
 		"svelte-sonner": "^1.0.5",
-		"sveltekit-superforms": "^2.27.4",
-		"tailwindcss": "^4.1.14",
+		"sveltekit-superforms": "^2.28.0",
+		"tailwindcss": "^4.1.15",
 		"tslib": "^2.8.1",
 		"tw-animate-css": "1.4.0",
 		"typescript": "^5.9.3",
 		"vaul-svelte": "1.0.0-next.7",
-		"vite": "^7.1.10",
+		"vite": "^7.1.11",
 		"vitest": "^3.2.4",
 		"zod": "4.1.12"
 	},
@@ -170,7 +170,7 @@
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd",
+	"packageManager": "pnpm@10.19.0",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@tailwindcss/oxide",
